WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
84819
overflow: hidden on the main frame is broken with threaded scrolling
https://bugs.webkit.org/show_bug.cgi?id=84819
Summary
overflow: hidden on the main frame is broken with threaded scrolling
Anders Carlsson
Reported
2012-04-24 19:55:30 PDT
overflow: hidden on the main frame is broken with threaded scrolling
Attachments
Patch
(10.39 KB, patch)
2012-04-24 19:56 PDT
,
Anders Carlsson
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2012-04-24 19:56:53 PDT
Created
attachment 138722
[details]
Patch
Anders Carlsson
Comment 2
2012-04-24 20:01:47 PDT
Committed
r115163
: <
http://trac.webkit.org/changeset/115163
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug