overflow: hidden on the main frame is broken with threaded scrolling https://bugs.webkit.org/show_bug.cgi?id=84819 <rdar://problem/10920677>

Reviewed by Darin Adler.

Pass along the horizontal and vertical scrollbar modes to the scrolling tree and use it
to determine if wheel events should be handled or not. This matches what we do for non-threaded scrolling.

* page/scrolling/ScrollingCoordinator.cpp:
(WebCore::ScrollingCoordinator::frameViewLayoutUpdated):
(WebCore::ScrollingCoordinator::setScrollParameters):
* page/scrolling/ScrollingCoordinator.h:
(ScrollParameters):
* page/scrolling/ScrollingTreeNode.cpp:
(WebCore::ScrollingTreeNode::ScrollingTreeNode):
(WebCore::ScrollingTreeNode::update):
* page/scrolling/ScrollingTreeNode.h:
(WebCore::ScrollingTreeNode::canHaveScrollbars):
(ScrollingTreeNode):
* page/scrolling/ScrollingTreeState.cpp:
(WebCore::ScrollingTreeState::ScrollingTreeState):
(WebCore::ScrollingTreeState::setHorizontalScrollbarMode):
(WebCore):
(WebCore::ScrollingTreeState::setVerticalScrollbarMode):
* page/scrolling/ScrollingTreeState.h:
(WebCore::ScrollingTreeState::horizontalScrollbarMode):
(ScrollingTreeState):
(WebCore::ScrollingTreeState::verticalScrollbarMode):
* page/scrolling/mac/ScrollingTreeNodeMac.mm:
(WebCore::ScrollingTreeNodeMac::handleWheelEvent):

Canonical link: https://commits.webkit.org/102317@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@115163 268f45cc-cd09-0410-ab3c-d52691b4dbfc